crates/component-tui/tests/snapshots/snapshot__local_view_empty_snapshot.snap
---
source: crates/component-tui/tests/snapshot.rs
expression: output
---
                No local WASM files detected.

                    Press 'r' to refresh.
