crates/component-tui/tests/snapshots/snapshot__log_view_empty_snapshot.snap
---
source: crates/component-tui/tests/snapshot.rs
expression: output
---
                              No log entries found.

                        Run `wasm self log` to view logs.
